--- a/unit1/1.3.concrete-manifesto/index.html
+++ b/unit1/1.3.concrete-manifesto/index.html
@@ -3,19 +3,59 @@
 <head>
     <meta charset="utf-8">
     <title>Concrete Manifesto</title> 
-    <!--
-        Use this page to complete the "Concrete Manifesto" exercise:
-        https://canvas.umw.edu/courses/1499064/assignments/11895963
+   <!--
+        My manifesto statement is by selce:
+        "Design is for everyone, with no distinctions."
+        https://designmanifestos.org/selce-manifesto/
     -->  
+  
+<link href="https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap" rel="stylesheet">
 
     <style type="text/css">
+        p {
+     font-family: Playwrite Cu;
+     font-size: 50px;
+     text-align: center;
+     padding: 5;
+     line-height: 48px;
+     text-decoration-line: underline;
+     text-decoration-color: darkred;
+     text-decoration-thickness: 5px;
+     letter-spacing: 115px;
+        }
+
+        h2 {
+     font-family: Playwrite Cu;
+     font-size: 50px;
+     text-align: left;
+     padding: 5;
+     line-height: 48px;
+     text-decoration-line: line-through;
+     text-decoration-color: darkred;
+     text-decoration-thickness: 5px;
+     letter-spacing: 80px;
+        }
+
+        h1{
+    font-family: Bebas Neue;
+    font-size: 100px;
+    text-align: center;
+    margin: 3000;
+    border: black;
+    border-width: 5px;
+    border-style: solid;
+    letter-spacing: 45px;
+   
+        }
 
     </style>
 </head>
-<body>
+<body style="background-color:cornsilk;">
 
-    <h1>This is a Manifesto</h1>
-    <p>This is a paragraph.</p>
+    <h1>Design is for</h1>
+    <p><b>everyone,</b></p>
+    <h1>with no</h1>
+    <h2>d<br>&nbsp;&nbsp;i<br>&nbsp;&nbsp;&nbsp;&nbsp;s<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;t<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;i<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;n<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;c<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;t<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;i<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;o<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;n<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;s</h2>
 
 </body>
 </html> 
