--- a/unit1/self-portrait/index.html
+++ b/unit1/self-portrait/index.html
@@ -67,12 +67,12 @@ p {
 </head>
 
 <body style="background-color:cornsilk;">
-    <img id="bookly" src="C:\Users\rylie\OneDrive\Desktop\Fall 24\1- Creative Coding\creative-coding\unit1\self-portrait\20240917_011649713_iOS.png" />
-    <img id="img1" src="C:\Users\rylie\OneDrive\Desktop\Fall 24\1- Creative Coding\creative-coding\unit1\self-portrait\Screenshot 2024-09-16 212451.png"/>
-    <img id="playlist" src ="C:\Users\rylie\OneDrive\Desktop\Fall 24\1- Creative Coding\creative-coding\unit1\self-portrait\Screenshot 2024-09-16 215753.png"/>
-    <img id ="dogs" src = "C:\Users\rylie\OneDrive\Desktop\Fall 24\1- Creative Coding\creative-coding\unit1\self-portrait\IMG_5459.jpg"/>
-    <img id="streak" src = "C:\Users\rylie\OneDrive\Desktop\Fall 24\1- Creative Coding\creative-coding\unit1\self-portrait\IMG_5767.JPG"/>
-    <img id="cords" src = "C:\Users\rylie\OneDrive\Desktop\Fall 24\1- Creative Coding\creative-coding\unit1\self-portrait\IMG_4521.jpg" />
+    <img id="bookly" src="https://photos.fife.usercontent.google.com/pw/AP1GczNJhhlhLRkIAUkwqqpBRHL15lDddNE2UFI1sX7n7aMWS0SXBjGnKap7=w482-h827-s-no-gm?authuser=0" />
+    <img id="img1" src="https://photos.fife.usercontent.google.com/pw/AP1GczOT5PEsEKB72QeqnrVd0rxdirhi_MLQPPwLZAX06h6JFsu_slqf9kgC=w1013-h654-s-no-gm?authuser=0"/>
+    <img id="playlist" src ="https://photos.fife.usercontent.google.com/pw/AP1GczNs6pmb_G4Qza_WhQ8LXsW5ZQlrLgYvzpW3P1KDgyzJGQUQGqnNjtXR=w588-h827-s-no-gm?authuser=0"/>
+    <img id ="dogs" src = "https://photos.fife.usercontent.google.com/pw/AP1GczMwt5si_YTAbe0HqbGcqyVU8J2mhdtAY2xDQ4QpLn9NZA18EYyRhMcW=w620-h827-s-no-gm?authuser=0"/>
+    <img id="streak" src = "https://photos.fife.usercontent.google.com/pw/AP1GczNmChMrLTqZD_ubwyGBUxQSiidB6LzpTV2M_aZqJ9N2CeuWh9MY2xvS=w827-h827-s-no-gm?authuser=0"/>
+    <img id="cords" src = "https://photos.fife.usercontent.google.com/pw/AP1GczMFIFE9wbxjFXqlzfFe6SolIKatPGJlgyBc8XVqcVISE0wtVw7WdLYl=w361-h298-no?authuser=0"/>
 
   <p id="demo">
         To define is to limit.
