--- a/unit1/self-portrait/index.html
+++ b/unit1/self-portrait/index.html
@@ -67,7 +67,7 @@ p {
 </head>
 
 <body style="background-color:cornsilk;">
-    <img id="bookly" src="https://imgur.com/gallery/bookyl-8TUgQku" />
+    <img id="bookly" src="https://i.imgur.com/NccIdu2.png" />
     <img id="img1" src="https://imgur.com/a/IEnSHwH"/>
     <img id="playlist" src ="https://imgur.com/a/Co1bwFQ"/>
     <img id ="dogs" src = "https://imgur.com/a/BNMw1gt"/>
