--- a/unit1/self-portrait/index.html
+++ b/unit1/self-portrait/index.html
@@ -68,11 +68,11 @@ p {
 
 <body style="background-color:cornsilk;">
     <img id="bookly" src="https://i.imgur.com/NccIdu2.png" />
-    <img id="img1" src="https://imgur.com/a/IEnSHwH"/>
-    <img id="playlist" src ="https://imgur.com/a/Co1bwFQ"/>
-    <img id ="dogs" src = "https://imgur.com/a/BNMw1gt"/>
-    <img id="streak" src = "https://imgur.com/a/I4KIvpG"/>
-    <img id="cords" src = "https://imgur.com/a/agXTpok"/>
+    <img id="img1" src="https://i.imgur.com/siuBxdW.png"/>
+    <img id="playlist" src ="https://i.imgur.com/Vwjn26q.png"/>
+    <img id ="dogs" src = "https://i.imgur.com/IgWegtc.jpeg"/>
+    <img id="streak" src = "https://i.imgur.com/vXSdrij.jpeg"/>
+    <img id="cords" src = "https://i.imgur.com/Y7AWHXM.jpeg"/>
 
   <p id="demo">
         To define is to limit.
