--- a/unit4/4.1.remix/remix3park.html
+++ b/unit4/4.1.remix/remix3park.html
@@ -14,10 +14,11 @@ notice and this notice are preserved. This file is offered as-is,
 without any warranty.
 
 -->
+// I have updated this code and changed the language
 <style>
 /* <![CDATA[ */
 body {
- background: #d11;
+ background: lightskyblue;
  color: #000;
  margin: 24pt 24pt 0 24pt;
  font-family: "Helvetica Neue", Helvetica, Arial, Nimbus Sans, Verdana, sans-serif;
@@ -93,7 +94,7 @@ function story() {
 </head>
 <body onload="story();">
 <div style="float:right; color:#711; width:250px; font-style:italic">
-<p>Text &amp; Code: <a href="http://nickm.com">Nick Montfort</a></p>
+<p>Text &amp; Code Credit: <a href="http://nickm.com">Nick Montfort</a></p>
 <p>This page, using a very simple bit of JavaScript, generates different stories by omitting different sentences from a prepared list at random each time. <a href="through_the_park.html">Reload</a> for a different story. This process was implemented first in Python: <a href="through_the_park.py">through_the_park.py</a></p>
 <p><a href="por_el_parque.html">Español</a> &middot; <a href="przez_park.html">Polski</a> &middot; <a href="cherez_park.html">Русский</a></p></div>
 <div style="height:60pt; font-size:26pt">Through the Park</div>
