--- a/unit4/4.1.remix/index.html
+++ b/unit4/4.1.remix/index.html
@@ -5,6 +5,14 @@
 </head>
 <body>
 
-<a href="remix1lede.html">Find my remix of <i> Lede </i> by Nick Monfort here. It will generate stories about bugs doing things that bugs are not supposed to do!</a>
+<dl>
+	<dt><a href="remix1lede.html"> <i> Lede </i></dt></a>
+	<dd> It will generate stories about bugs doing things that bugs are not supposed to do! </dd>
+	
+	<dt><a href="remix2safety.html"> <i> Safety </i></dt></a>
+	<dd> For when arts and crafts goes wrong.</dd>
+
+	<dt><a href="remix3park.html"> <i> A Walk in the park </i></dt></a>
+	<dd> For when arts and crafts goes wrong,</dd>
 </body>
 </html>
