--- a/unit4/book/index.html
+++ b/unit4/book/index.html
@@ -1,3 +1,6 @@
+<!-- for my book project, i wanted to comment on the interchangable and stereotypical nature of "bodice ripper" romance novels
+as such, my book is somewhat uncomfortable to read, but does generate some fantastic sentences on occasion. 
+a world exists where this could have been made more explicit, but i didn't want to take it further than it needed to go. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,14 +8,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
 
     <!-- include the Tracery library -->
+
     <script src="https://cdn.jsdelivr.net/npm/tracery-grammar@2.7.4/tracery.min.js"></script>
 
-    <!-- include the Bindery library -->
-    <script src="https://unpkg.com/bindery@2.3.0/dist/bindery.min.js"></script>
+          <!-- include the Paged.js polyfill -->
+    <script defer src="https://unpkg.com/pagedjs/dist/paged.polyfill.js"></script>
 
-    <!-- RiTa library -->
-    <script src="https://unpkg.com/rita@2.8.31/dist/rita.js"></script>
+    <script>
+        // disable automatic rendering
+        window.PagedConfig = {auto: false};
+    </script>
 
+    <!-- how to make book more book https://pagedjs.org/documentation/2-getting-started-with-paged.js/ -->
+
+  <link href="https://rylie7teal.github.io/creative-coding/unit4/book/interface.css" rel="stylesheet" type="text/css" />
 
     <title>Book</title> 
     <!--
@@ -21,13 +30,23 @@
     -->  
 
     <style type="text/css">
-      
+/*code for the page number sourced from Paged.js website and this website: https://doppio.sh/blog/mastering-paged-js-essential-tips-for-creating-precision-pdfs-from-html*/
+            @page { 
+      size: A4;
+      margin: 20mm;
+      @top-right-corner {
+          vertical-align: right;
+          text-align: center;
+          color: black;
+          content: counter(page);
+      }
+  }
     </style>
 
 </head>
 <body>
-    <main>
-    </main>
+
     <script src="sketch.js"></script>
+
 </body>
 </html> 
