--- a/unit4/4.2.houses-of-dust/index.html
+++ b/unit4/4.2.houses-of-dust/index.html
@@ -6,7 +6,7 @@
 
     <!-- include the Tracery library -->
     <!-- <script src="tracery.min.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/tracery-grammar@2.7.4/tracery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tracery-grammar@2.7.4/tracery.min.js"></script> //including external library
 
     <title>Houses of Dust</title> 
     <!--
